[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/admob.gd" type="Script" id=1]

[node name="admob" type="Node2D"]
position = Vector2( 278.421, 247.789 )
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BtnBanner" type="Button" parent="CanvasLayer"]
margin_left = 190.0
margin_top = 152.0
margin_right = 371.0
margin_bottom = 172.0
disabled = true
toggle_mode = true
text = "Show/Hide Banner"

[node name="BtnInterstitial" type="Button" parent="CanvasLayer"]
margin_left = 190.0
margin_top = 182.0
margin_right = 371.0
margin_bottom = 202.0
disabled = true
toggle_mode = true
text = "Show Interstitial"

[node name="BtnRewardedVideo" type="Button" parent="CanvasLayer"]
margin_left = 190.0
margin_top = 212.0
margin_right = 371.0
margin_bottom = 232.0
disabled = true
toggle_mode = true
text = "Show Rewarded Video"

[node name="LblRewarded" type="Label" parent="CanvasLayer"]
margin_top = 122.0
margin_right = 576.0
margin_bottom = 136.0
text = "REWARDED VIDEO RETURN"
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
margin_right = 575.0
margin_bottom = 103.0

[connection signal="toggled" from="CanvasLayer/BtnBanner" to="." method="_on_BtnBanner_toggled"]
[connection signal="pressed" from="CanvasLayer/BtnInterstitial" to="." method="_on_BtnInterstitial_pressed"]
[connection signal="pressed" from="CanvasLayer/BtnRewardedVideo" to="." method="_on_BtnRewardedVideo_pressed"]
